--- a/style.css
+++ b/style.css
@@ -14,13 +14,34 @@ nav {
 .navbar ul li:last-child:after {
     content: "";
 }
-
+/* Hero CSS */
+.hero {
+    display: block;
+    position: relative;
+    text-align: center;
+    height: 100%;
+}
+.hero img {
+    width: 100%;
+    margin: 0;
+}
+.hero .title {
+    background: #ffffffb0;
+    padding: 10px;
+    width: 100%;
+    color: black;
+    position: absolute;
+    font-size: 56px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 /* Bootstrap Main Body Style Overrides */
 body {
     background-color: #e9e9e9;
 }
 .container {
-    max-width: 960px;
+    /* max-width: 960px; */
     min-height: 1000px;
 }
 .row {
