--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav {
     margin: 0;
 }
 .hero .title {
-    background: #ffffffb0;
+    background: #ffffffd2;
     padding: 10px;
     width: 100%;
     color: black;
@@ -35,6 +35,7 @@ nav {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border: 2px solid black;
 }
 /* Bootstrap Main Body Style Overrides */
 body {
@@ -47,6 +48,9 @@ body {
 .row {
     background-color: white;
     margin: 25px 10px 25px 10px;
+    border: 1px solid rgb(197, 197, 197);
+    border-radius: 5px;
+    padding: 20px;
 }
 .col-sm-6 {
     margin-top: 10px;
